--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -5,7 +6,6 @@
 	<title>Uber Randomizer</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="./reset.css">
 	<link rel="stylesheet" href="./styles.css">
 	<script src="./scripts.js" defer></script>
 </head>
@@ -14,8 +14,9 @@
 		<h1>Uber Randomizer</h1>
 		<h2>Make you life less flat</h2>
 		<div class="circle go-eat">
-			<span class='circle-phrase' id='eatBtn'>Go Eat!</span>
+			<span class='circle-phrase' id='btnEat'>Go Eat!</span>
 		</div>
+		<p class="result hide"></p>
 	</section>
 </body>
 </html>
