--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 		<div class="circle go-eat">
 			<span class='circle-phrase' id='btnEat'>Go Eat!</span>
 		</div>
-		<p class="result hide"></p>
+		<div class="result hide">
+			<h2 class="venue-name"></h2>
+			<p class="venue-address"></p>
+		</div>
 	</section>
 </body>
 </html>
