--- a/index.html
+++ b/index.html
@@ -7,19 +7,33 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="./styles.css">
-	<script src="./scripts.js" defer></script>
 </head>
 <body>
 	<section class='main-section'>
-		<h1>Uber Randomizer</h1>
-		<h2>Make you life less flat</h2>
-		<div class="circle go-eat">
-			<span class='circle-phrase' id='btnEat'>Go Eat!</span>
-		</div>
-		<div class="result hide">
-			<h2 class="venue-name"></h2>
-			<p class="venue-address"></p>
-		</div>
+		<header>
+			<h1>Uber Randomizer</h1>
+			<h2>Make you life less flat</h2>
+		</header>
+        <div class="circle-wrapper">
+            <svg class="circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <circle class="circle-button" r="50%" cx="50%" cy="50%"></circle>
+            </svg>
+            <svg class="circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <circle class="circle-loading" r="50%" cx="50%" cy="50%" clip-path="url(#clipPath)"></circle>
+                <clipPath id="clipPath">
+                    <circle cx="50%" cy="50%" r="47%"></circle>
+                    <rect x="0" y="0" width="100%" height="50%"></rect>
+                </clipPath>
+            </svg>
+            <div class="circle-phrase" id="btn">GO Eat!</div>
+        </div>
 	</section>
+	<section class="result hide">
+		<h2 class="venue-name"></h2>
+		<p class="venue-address"></p>
+		<div id="map-canvas"></div>
+	</section>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="./scripts.js"></script>
 </body>
 </html>
