--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-	<section class='main-section'>
+	<section id="main" class='main-section'>
 		<header>
 			<h1>Uber Randomizer</h1>
 			<h2>Make you life less flat</h2>
 		</header>
-        <div class="circle-wrapper">
+        <div id="circle" class="circle-wrapper">
             <svg class="circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <circle class="circle-button" r="50%" cx="50%" cy="50%"></circle>
             </svg>
-            <svg class="circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg id="circleLine" class="circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <circle class="circle-loading" r="50%" cx="50%" cy="50%" clip-path="url(#clipPath)"></circle>
                 <clipPath id="clipPath">
                     <circle cx="50%" cy="50%" r="47%"></circle>
@@ -28,10 +28,10 @@
             <div class="circle-phrase" id="btn">GO Eat!</div>
         </div>
 	</section>
-	<section class="result hide">
-		<h2 class="venue-name"></h2>
-		<p class="venue-address"></p>
-		<div id="map-canvas"></div>
+	<section id="result" class="result hide">
+		<h2 id="placeName" class="venue-name"></h2>
+		<p id="placeAddress" class="venue-address"></p>
+		<div id="mapCanvas" class="map-canvas"></div>
 	</section>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script src="./scripts.js"></script>
